kubernetes/components/resources/pgadmin/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: https
  hostnames:
    - pgadmin.${DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /${namespace}
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Script-Name
                value: /${namespace}
      backendRefs:
        - name: pgadmin-service
          port: 5050
